# lesson19.2

./: README.md  catalog.json  dump.rdb  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_views_counter_alter_category_description_and_more.py  0003_version.py  0004_alter_version_name_version_and_more.py  0005_product_owner.py  0006_alter_product_options.py
catalog/templates/: base.html  catalog_detail.html  catalog_list.html  contacts.html  home.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
